kubernetes-yml-files/service-ingress-kong-hello-world-client.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - http:
        paths:
          - path: /getMessageGrpc
            backend:
              serviceName: hello-world-client
              servicePort: 8080
